fix for overflow on tall cards

--- a/resources/assets/scss/modules/_helpers.scss
+++ b/resources/assets/scss/modules/_helpers.scss
@@ -3,6 +3,7 @@
 }
 .vertical-center {
   align-self: center;
+  margin: auto;
 }
 
 em.bold {
